changed to deeper navigation structure

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,17 @@ sidebar:
   - index
   - tuwhana
   - news
-  - people
-  - vacancies
+  - label: people
+    children: 
+      - researchers
+      - students
+      - advisoryboard
   - outputs
+    label: outputs
+    children: 
+      - publications
+      - datasets
+      - software
+      - cves
+  - vacancies
   - publications
