fixed navigation structure bug preventing build

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,7 @@ sidebar:
       - researchers
       - students
       - advisoryboard
-  - outputs
-    label: outputs
+  - label: outputs
     children: 
       - publications
       - datasets
